@@ -6,7 +6,9 @@ Upgrading UselessOperationOnImmutable to detect more use cases, especially on St
 Fixed bug 1988829 - Violation reported without source file name (actually a fix to ConsecutiveLiteralAppends)
 Fixed bug 1989814 - false +: ConsecutiveLiteralAppends
 Fixed bug 1977230 - false positive: UselessOverridingMethod
+Fixed bug 1998185 - BeanMembersShouldSerialize vs @SuppressWarnings("serial")
 Optimizations and false positive fixes in PreserveStackTrace
+@SuppressWarnings("all") disables all warnings
 
 New rule:
 	Basic ruleset:	EmptyInitializer
